app/editor/editor.css
/* honestly, no idea what's going on here. pre has left: -20px set
   somewhere :( */
.remaining-height pre {
    left: inherit;
}

.CodeMirror {
    z-index: 0;
    height: 100%;
    width: 100%;
}

.CodeMirror-scroll {
    height: 100%;
    overflow-x: auto;
    overflow-y: auto;
}

/* compensate for navbar height */
.remaining-height {
    height: calc(100% - 45px) !important;
}

.cm-clickable-link {
    color: blue;
    text-decoration: underline;
    cursor: pointer;
}


.settings-wrapper {
    height: 100%;
    width: 100%;
}

